; ModuleID = '/home/carl/AnghaBench/lz4/tests/extr_fullbench.c_local_LZ4F_compressFrame.c'
source_filename = "/home/carl/AnghaBench/lz4/tests/extr_fullbench.c_local_LZ4F_compressFrame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i32)* @local_LZ4F_compressFrame to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @local_LZ4F_compressFrame(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = icmp sge i32 %7, 0
  %9 = zext i1 %8 to i32
  %10 = call i32 @assert(i32 %9)
  %11 = load i8*, i8** %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = sext i32 %12 to i64
  %14 = call i32 @LZ4F_compressFrameBound(i64 %13, i32* null)
  %15 = load i8*, i8** %4, align 8
  %16 = load i32, i32* %6, align 4
  %17 = sext i32 %16 to i64
  %18 = call i64 @LZ4F_compressFrame(i8* %11, i32 %14, i8* %15, i64 %17, i32* null)
  %19 = trunc i64 %18 to i32
  ret i32 %19
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @LZ4F_compressFrame(i8*, i32, i8*, i64, i32*) #1

declare dso_local i32 @LZ4F_compressFrameBound(i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
